...
                  child: Form(
                    key: _formKey,
                    child: Column(
                      crossAxisAlignment: CrossAxisAlignment.start,
                      children: [
                        TextFormField(
                           key:Key('firstname'),
                            controller: _firstNameController,
                            decoration: InputDecoration(
                              labelText: 'First Name',
                              filled: true,
                              fillColor: Colors.grey[200],
                              border: OutlineInputBorder(
...
                            },
                            onSaved: (value) {
                              _owner['firstName'] = value;
                            }),
                        const SizedBox(height: 16.0),
                        TextFormField(
                            key: Key('lastname'),
                            controller: _lastNameController,
                            decoration: InputDecoration(
                              labelText: 'Last Name',
                              filled: true,
                              fillColor: Colors.grey[200],
                              border: OutlineInputBorder(
...
                            },
                            onSaved: (value) {
                              _owner['lastName'] = value;
                            }),
                        const SizedBox(height: 16.0),
                        TextFormField(
                          key:Key('username'),
                          controller: _usernameController,
                          decoration: InputDecoration(
                            labelText: 'Username',
                            filled: true,
                            fillColor: Colors.grey[200],
                            border: OutlineInputBorder(
...
                          onSaved: (value) {
                            _owner['username'] = value;
                          },
                        ),
                        const SizedBox(height: 16.0),
                        TextFormField(
                           key:Key('email'),
                            controller: _emailController,
                            decoration: InputDecoration(
                              hintText: 'example@gmail.com',
                              labelText: 'Email',
                              filled: true,
                              fillColor: Colors.grey[200],
...
                            },
                            onSaved: (value) {
                              _owner['email'] = value;
                            }),
                        const SizedBox(height: 16.0),
                        TextFormField(
                          key: Key('password'),
                          controller: _passwordController,
                          decoration: InputDecoration(
                            labelText: 'Password',
                            filled: true,
                            fillColor: Colors.grey[200],
                            border: OutlineInputBorder(
...
                        ),
                        const SizedBox(height: 16.0),
                        SizedBox(
                          width: double.infinity,
                          height: 50.0,
                          child: ElevatedButton(
                            key:Key('signupbutton'),
                            onPressed: () {
                              final form = _formKey.currentState;
                              if (form!.validate()) {
                                form.save();
                                print(_owner);
                                final CompoundOwnerSignUpEvent event =
...
